--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 
 <body>
-  <h1>Idan Farber Avramov</h1>
-  <p>Welcome to my website!</p>
+  <h1>My name is Idan Farber Avramov</h1>
+  <H3>And this is my first site</H3> 
+  <p>Welcome and enjoy!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
